--- a/www/index.html
+++ b/www/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="style.css"></link>
     <script src="elm.js"></script>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
-    </style>
   </head>
   <body>
     <div id="app"></div>
